--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.544.0",
+    "mongodb": "^7.1.0",
     "next": "15.5.3",
     "next-auth": "^4.24.13",
     "react": "19.1.0",
